--- a/less/style.less
+++ b/less/style.less
@@ -2,11 +2,12 @@
 
 @import "fonts.less";
 @import "variables.less";
+@import "mixins.less";
 @import "common.less";
 
-@import "blocks/logo.less";
+@import "blocks/page-header.less";
 @import "blocks/main-nav.less";
-
+@import "blocks/logo.less";
 @import "blocks/page-title.less";
 @import "blocks/product-type.less";
 @import "blocks/btn.less";
@@ -15,7 +16,9 @@
 @import "blocks/reviews.less";
 @import "blocks/contacts.less";
 
+@import "blocks/product-catalog.less";
 @import "blocks/product.less";
+
 @import "blocks/production.less";
 
 @import "blocks/knitting-form.less";
