--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,10 @@
 @font-regular: "OpenSans", "Arial", sans-serif;
 @font-bold: "OpenSans Bold", "Arial", sans-serif;
 
+@mobile-widths-only: ~"(max-width: 767px)";
+@tablet-widths: ~"(min-width: 768px)";
+@desktop-widths: ~"(min-width: 1150px)";
+
 @cl-white: #ffffff;
 @cl-black: #000000;
 @cl-light-gray: #f1f1f1;
@@ -8,5 +12,6 @@
 @cl-turquoise: #63d1bb;
 @cl-dark-turquoise: #56c3b2;
 
+@cl-toggle: #221f1f;
 @cl-header-border: #ececec;
 @cl-product-border: #ededed;
