--- a/less/common.less
+++ b/less/common.less
@@ -1,6 +1,6 @@
 body {
-  width: 320px;
+  min-width: 320px;
   font-family: @font-regular;
   color: @cl-black;
-  backgroun-color: @cl-white;
+  background-color: @cl-white;
 }
