--- a/less/fonts.less
+++ b/less/fonts.less
@@ -2,12 +2,12 @@
   font-family: "OpenSans";
   font-style: normal;
   font-weight: 400;
-  src: local("OpenSans"), url("../fonts/opensans.woff") format("woff"), url("../fonts/opensans.woff2") format("woff2");
+  src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
 }
 
 @font-face {
   font-family: "OpenSans Bold";
   font-style: normal;
   font-weight: 700;
-  src: local("OpenSans Bold"), url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2");
+  src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
 }
