--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,10 +1,9 @@
 .btn {
-  display: inline-block;
-  vertical-align: top;
+  display: block;
   margin: 0;
   padding: 10px 0;
   font-family: @font-bold;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 1;
   text-align: center;
   text-decoration: none;
