--- a/less/blocks/modal-size.less
+++ b/less/blocks/modal-size.less
@@ -2,8 +2,7 @@
   margin: 0;
   padding: 35px 0 45px 0;
   width: 320px;
-  border-top: 1px solid #c7c7c7;
-  border-bottom: 1px solid #c6c6c6;
+  border: 1px solid #c7c7c7;
 }
 
 .modal-size__title {
@@ -27,7 +26,8 @@
 }
 
 .modal-size__add {
-  margin: 30px 0 0 0;
+  display: block;
+  margin: 30px auto 0 auto;
   padding: 20px;
   width: 260px;
   font-family: @font-bold;
@@ -38,4 +38,28 @@
   background-color: @cl-turquoise;
   border: 0;
   cursor: pointer;
+}
+
+
+@media @tablet-widths {
+  .modal-size {
+    width: 568px;
+  }
+
+  .modal-size__title {
+    font-size: 30px;
+    line-height: 57px;
+  }
+
+  .modal-size__label {
+    font-size: 17px;
+  }
+
+  .modal-size__add {
+    width: 350px;
+  }
+}
+
+@media @desktop-widths {
+
 }
