--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -1,15 +1,60 @@
 .page-title {
   margin: 0;
-  padding: 70px 0 75px 0;
+  padding: 0;
+
+  background-color: @cl-light-gray;
+
+  &--index {
+    height: 282px;
+    background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+  }
+}
+
+.page-title__label {
+  width: 260px;
+  margin: 0 auto;
+  padding: 70px 0 70px 0;
   font-family: @font-bold;
   font-size: 27px;
   line-height: 30px;
   text-align: center;
 
-  background-color: @cl-light-gray;
+  /*временно для сетки*/
+  /*background-color: red;*/
 }
 
-.page-title--index-img {
-  height: 137px;
-  background: @cl-light-gray url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
+
+@media @tablet-widths {
+  .page-title {
+
+    border-top: 1px solid @cl-header-border;
+
+    &--index {
+      height: 626px;
+      background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 100%;
+    }
+  }
+
+  .page-title__label {
+    width: 500px;
+
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .page-title__label br {
+    display: none;
+  }
+}
+
+
+@media @desktop-widths {
+
+
+  .page-title__label {
+    width: 620px;
+
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
