--- a/less/blocks/product-type.less
+++ b/less/blocks/product-type.less
@@ -1,47 +1,89 @@
+.product-type {
+  background-color: #f9f9f9;
+}
+
 .product-type__list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
   margin: 0;
   padding: 0;
   list-style: none;
-}
 
-.product-type__item {
-  position: relative;
-  display: inline-block;
-  vertical-align: top;
-  margin: 0;
-  padding: 25px 30px 30px 30px;
-  min-width: 260px;
   font-family: @font-bold;
   font-size: 19px;
   line-height: 24px;
+
+
+  /*временно для сетки*/
+  /*background-color: lightcyan;*/
+}
+
+.product-type__link {
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 25px 30px 30px 30px;
+
   text-decoration: none;
   color: @cl-white;
+
+  &--interior {
+    background-color: @cl-turquoise;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 21px;
+      right: 35px;
+      width: 45px;
+      height: 65px;
+      background: url("../img/icon-interior.svg") no-repeat 50% 50%;
+    }
+  }
+
+  &--toys {
+    background-color: @cl-dark-turquoise;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 17px;
+      right: 26px;
+      width: 62px;
+      height: 65px;
+      background: url("../img/icon-toy.svg") no-repeat 50% 50%;
+    }
+  }
 }
 
-.product-type__item--interior {
-  background-color: @cl-turquoise;
+
+
+@media @tablet-widths {
+  .product-type__list {
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 668px;
+    margin: 0 auto;
+    padding: 0;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .product-type__link {
+    width: 274px;
+  }
 }
 
-.product-type__item--interior::after {
-  content: "";
-  position: absolute;
-  top: 21px;
-  right: 35px;
-  width: 45px;
-  height: 65px;
-  background: url("../img/icon-interior.svg") no-repeat 50% 50%;
-}
+@media @desktop-widths {
+  .product-type__list {
+    width: 1050px;
+  }
 
-.product-type__item--toys {
-  background-color: @cl-dark-turquoise;
-}
-
-.product-type__item--toys::after {
-  content: "";
-  position: absolute;
-  top: 17px;
-  right: 26px;
-  width: 62px;
-  height: 65px;
-  background: url("../img/icon-toy.svg") no-repeat 50% 50%;
+  .product-type__link {
+    width: 465px;
+  }
 }
