--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,6 +1,8 @@
-.contacts {
-  margin: 0;
-  padding: 40px 0 40px 0;
+.contacts__wrapper {
+  position: relative;
+  width: 320px;
+  margin: 0 auto;
+  padding: 30px 0 0 0;
 }
 
 .contacts__title {
@@ -12,19 +14,58 @@
 }
 
 .contacts__content {
-  margin: 0;
+  margin: 20px 0 20px 0;
   padding: 0;
   font-size: 15px;
   line-height: 30px;
   color: @cl-gray;
 }
 
-.contacts__content-link {
-  color: @cl-gray;
-  text-decoration: none;
-  border-bottom: 1px solid #62d1ba;
-}
-
 .contacts__write-us {
   width: 256px;
+  margin: 20px auto 0 auto;
+}
+
+
+
+@media @tablet-widths {
+  .contacts__wrapper {
+    width: 768px;
+  }
+
+  .contacts__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .contacts__content {
+    font-size: 17px;
+  }
+}
+
+
+@media @desktop-widths {
+  .contacts__wrapper {
+    width: 700px;
+    padding: 70px 175px 0 175px;
+
+    /*верменно*/
+    min-height: 457px;
+  }
+
+  .contacts__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .contacts__map {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  .contacts__write-us {
+    width: 226px;
+    margin: 0;
+  }
 }
