--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -1,7 +1,40 @@
 .logo {
-  margin: 0;
-  padding: 22px 0 22px 0;
-  font-size: 0;
   text-align: center;
-  border-bottom: 1px solid @cl-header-border;
+
+  &--header {
+    margin: 0;
+    padding: 19px 0 19px 0;
+
+    border-top: 1px solid @cl-header-border;
+    border-bottom: 1px solid @cl-header-border;
+  }
+
+  &--footer {
+    display: none;
+    margin: 0;
+    padding: 50px 0 50px 0;
+  }
+
+  /*временно для сетки*/
+  /*background-color: red;*/
+}
+
+@media @tablet-widths {
+  .logo {
+
+    &--header {
+      margin: 0;
+      padding: 24px 0 24px 0;
+
+      border: 0;
+    }
+
+    &--footer {
+      display: block;
+    }
+  }
+}
+
+@media @desktop-widths {
+
 }
