--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,42 +1,250 @@
+.main-nav {
+  position: relative;
+
+  font-size: 17px;
+  line-height: 24px;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 28px;
+  right: 30px;
+  z-index: 3;
+  display: block;
+  width: 25px;
+  height: 25px;
+  font-size: 0;
+  border: none;
+  cursor: pointer;
+
+  background-color: @cl-white;
+}
+
+.main-nav--closed  .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  right: 0;
+
+  width: 20px;
+  height: 2px;
+
+  background-color: @cl-toggle;
+  box-shadow: 0 6px 0 0 @cl-toggle,
+              0 12px 0 0 @cl-toggle;
+}
+
+.main-nav--opened .main-nav__toggle {
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 12px;
+    right: -3px;
+
+    width: 30px;
+    height: 2px;
+
+    background-color: @cl-toggle;
+  }
+
+  &::before {
+      transform: rotate(45deg);
+      box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav__wrapper {
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+}
+
 .main-nav__menu-list {
+  display: flex;
+  flex-direction: column;
+
   margin: 0;
   padding: 0;
   list-style: none;
+
+  &--main {
+
+    /*временно для сетки*/
+    /*background-color: lightcyan;*/
+  }
+
+  &--user {
+
+    /*временно для сетки*/
+    /*background-color: lightyellow;*/
+  }
 }
 
 .main-nav__menu-item {
-  margin: 0;
+  margin: 0 0 0 0;
   padding: 24px 0 24px 75px;
+
+  background-color: @cl-white;
   border-bottom: 1px solid @cl-header-border;
 }
 
-.main-nav__menu-link {
+.main-nav__link {
   position: relative;
   font-family: @font-bold;
-  font-size: 18px;
-  line-height: 30px;
   text-decoration: none;
   color: @cl-black;
+
+  &--search::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -43px;
+    width: 19px;
+    height: 19px;
+
+    background: url("../img/icon-search.svg") no-repeat;
+  }
+
+  &--cart::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -43px;
+    width: 22px;
+    height: 19px;
+
+    background: url("../img/icon-cart.svg") no-repeat;
+  }
 }
 
-.main-nav__menu-link--search::before {
-  content: "";
-  position: absolute;
-  top: 3px;
-  left: -43px;
-  width: 19px;
-  height: 19px;
-
-  background: url("../img/icon-search.svg") no-repeat;
+.main-nav__special {
+  display: none;
+  margin: 0;
+  padding: 10px 0 0 0;
+  list-style: none;
+  font-size: 15px;
 }
 
-.main-nav__menu-link--cart::before {
-  content: "";
-  position: absolute;
-  top: 3px;
-  left: -43px;
-  width: 22px;
-  height: 19px;
+.main-nav__label {
+  display: none;
+  order: 2;
 
-  background: url("../img/icon-cart.svg") no-repeat;
+  margin: 0;
+  padding: 10px 0 0 0;
+
+  font-size: 15px;
+}
+
+
+@media @mobile-widths-only {
+  .main-nav--closed .main-nav__menu-list {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    height: auto;
+  }
+
+  .main-nav--nojs .main-nav__menu-list {
+    display: block;
+  }
+}
+
+
+
+@media @tablet-widths {
+
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav__wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 668px;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .main-nav__menu-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    &--main {
+      order: 1;
+      width: 305px;
+
+      font-size: 15px;
+
+      & .main-nav__menu-item {
+        margin: 0;
+        padding: 10px 0 0 0;
+
+        background-color: transparent;
+      }
+    }
+
+    &--user {
+      /*width: 400px;*/
+    }
+  }
+
+  .main-nav__menu-item {
+    border: 0;
+  }
+
+  .main-nav__label {
+    display: block;
+  }
+}
+
+
+
+@media @desktop-widths {
+  .main-nav__wrapper {
+
+    width: 1050px;
+  }
+
+  .main-nav__menu-list {
+
+    &--main {
+      order: -1;
+      width: 375px;
+
+      font-size: 17px;
+
+      & .main-nav__menu-item {
+        margin: 0;
+        padding: 25px 0 25px 0;
+      }
+    }
+  }
+
+  .main-nav__special {
+    display: flex;
+    justify-content: space-between;
+    width: 315px;
+  }
 }
