--- a/less/blocks/product-week.less
+++ b/less/blocks/product-week.less
@@ -1,6 +1,14 @@
 .product-week {
-  margin: 0;
-  padding: 35px 0 35px 0;
+
+}
+
+.product-week__wrapper {
+  .clearfix();
+  position: relative;
+
+  width: 260px;
+  margin: 0 auto;
+  padding: 30px 0 0 0;
 }
 
 .product-week__title {
@@ -22,7 +30,7 @@
 }
 
 .product-week__desc {
-  margin: 0;
+  margin: 20px 0 0 0;
   padding: 0;
   font-size: 15px;
   line-height: 24px;
@@ -30,23 +38,132 @@
 }
 
 .product-week__properties {
-  margin: 0;
+  margin: 20px 0 0 0;
   padding: 0;
   font-size: 15px;
   line-height: 20px;
   color: @cl-gray;
 }
 
+.product-week__img {
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+
 .product-week__cy {
-  display: block;
-  margin: 0;
+  display: inline-block;
+  vertical-align: top;
+  width: 260px;
+  margin: 20px 0 0 0;
   padding: 0;
   font-family: @font-bold;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
+  text-align: center;
   color: @cl-gray;
 }
 
 .product-week__buy {
   width: 256px;
+  margin: 20px 0 0 0;
+}
+
+
+
+
+@media @tablet-widths {
+
+  .product-week__wrapper {
+    width: 668px;
+    margin: 0 auto;
+    padding: 40px 0 0 0;
+
+    /*временно*/
+    min-height: 520px;
+  }
+
+  .product-week__title {
+
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .product-week__label {
+    position: absolute;
+    top: 40px;
+    right: 30px;
+    width: 70px;
+    text-align: center;
+  }
+
+  .product-week__desc {
+    width: 292px;
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  .product-week__properties {
+    width: 292px;
+  }
+
+  .product-week__img {
+    position: absolute;
+    top: 100px;
+    right: 0;
+
+    /*временно*/
+    width: 333px;
+    height: 404px;
+  }
+
+  .product-week__cy {
+    width: 292px;
+
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .product-week__buy {
+
+    width: 288px;
+  }
+}
+
+
+
+@media @desktop-widths {
+  .product-week__wrapper {
+    width: 875px;
+    margin: 0 auto;
+    padding: 70px 0 0 175px;
+
+    /*временно*/
+    min-height: 670px;
+  }
+
+  .product-week__title {
+
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .product-week__label {
+    position: absolute;
+    top: 70px;
+    left: 30px;
+  }
+
+  .product-week__desc {
+
+  }
+
+  .product-week__img {
+    top: 50px;
+    z-index: -1;
+
+    /*временно*/
+    width: 525px;
+    height: 636px;
+  }
 }
