--- a/less/blocks/product.less
+++ b/less/blocks/product.less
@@ -1,7 +1,10 @@
 .product {
+  position: relative;
+  width: 260px;
+  height: 375px;
+
   margin: 30px 0 0 0;
   padding: 0;
-  width: 260px;
   border: 1px solid @cl-product-border;
 }
 
@@ -32,4 +35,45 @@
   font-size: 15px;
   line-height: 24px;
   color: @cl-black;
+}
+
+
+@media @tablet-widths {
+  .product {
+    padding: 0 0 0 334px;
+
+    width: 334px;
+    height: 335px;
+  }
+
+  .product__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .product__title {
+    font-size: 20px;
+  }
+
+  .product__properties {
+    font-size: 15px;
+  }
+
+  .product__cy {
+    font-size: 17px;
+  }
+}
+
+@media @desktop-widths {
+  .product {
+    padding: 0;
+
+    width: 315px;
+    height: 650px;
+  }
+
+  .product__img {
+    position: static;
+  }
 }
