--- a/less/blocks/production.less
+++ b/less/blocks/production.less
@@ -1,13 +1,18 @@
 .production {
-  margin: 30px 0 50px 0;
-  padding: 30px 0 30px 0;
+  position: relative;
+  margin: 30px auto;
+  padding: 20px 0 20px 0;
   width: 260px;
   border: 1px solid @cl-product-border;
+
+  /*временно*/
+  height: 500px;
 }
 
 .production__title {
+  display: block;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 90px;
   font-family: @font-bold;
   font-size: 17px;
   line-height: 24px;
@@ -15,11 +20,79 @@
 
 .production__desc {
   margin: 0;
-  padding: 0;
+  padding: 30px 34px 30px 34px;
   font-size: 13px;
   line-height: 24px;
 }
 
 .production__order {
   width: 188px;
+  margin: 0 auto;
+}
+
+@media @tablet-widths {
+  .production {
+    padding: 470px 0 0 0;
+
+    width: 668px;
+
+    /*временно*/
+    height: 270px;
+  }
+
+  .production__title {
+    font-size: 20px;
+  }
+
+  .production__video {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    /**/
+    width: 668px;
+    height: 455px;
+  }
+
+  .production__desc {
+    margin: 0 auto;
+    padding: 30px 0 30px 0;
+    width: 588px;
+
+    font-size: 15px;
+    line-height: 30px;
+  }
+
+  .production__order {
+    width: 580px;
+  }
+}
+
+@media @desktop-widths {
+  .production {
+    width: 235px;
+    padding: 100px 55px 0 760px;
+
+    /*временно*/
+    height: 355px;
+  }
+
+  .production__title {
+    padding: 0;
+  }
+
+  .production__video {
+
+    /**/
+    width: 682px;
+    height: 455px;
+  }
+
+  .production__desc {
+    width: auto;
+  }
+
+  .production__order {
+    width: 226px;
+  }
 }
