--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,6 +1,8 @@
-.reviews {
-  margin: 0;
-  padding: 35px 0 35px 0;
+.reviews__wrapper {
+  position: relative;
+  width: 260px;
+  margin: 0 auto;
+  padding: 30px 0 0 0;
 }
 
 .reviews__title {
@@ -17,30 +19,87 @@
 }
 
 .reviews__text {
-  margin: 0;
-  padding: 0;
+  /*margin: 0;
+  padding: 0;*/
   font-size: 15px;
   line-height: 30px;
   color: @cl-gray;
 }
 
 .reviews__author-name {
+  display: block;
   margin: 0;
   padding: 0;
   font-family: @font-bold;
-  font-size: 18px;
+  font-size: 17px;
   font-style: normal;
   line-height: 24px;
 }
 
 .reviews__author-nickname {
+  display: block;
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 30px;
   color: @cl-gray;
 }
 
 .reviews__write {
   width: 256px;
+  margin: 20px 0 0 0;
+}
+
+
+@media @tablet-widths {
+
+  .reviews__wrapper {
+    width: 668px;
+    margin: 0 auto;
+    padding: 85px 50px 0 50px;
+
+    background: @cl-white url("../img/review@1x.jpg") no-repeat 0%;
+
+
+    /*временно*/
+    min-height: 370px;
+  }
+
+  .reviews__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .reviews__text {
+    font-size: 17px;
+  }
+
+  .reviews__arrows {
+    position: absolute;
+    bottom: 150px;
+    right: 37px;
+  }
+
+  .reviews__write {
+    position: absolute;
+    top: 85px;
+    right: 37px;
+    width: 171px;
+    margin: 0;
+  }
+}
+
+
+@media @desktop-widths {
+
+  .reviews__wrapper {
+    width: 875px;
+    margin: 0 auto;
+    padding: 80px 0 0 175px;
+  }
+
+  .reviews__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
