--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,14 +1,13 @@
 .main-nav {
   position: relative;
-
   font-size: 17px;
   line-height: 24px;
 }
 
 .main-nav__toggle {
   position: absolute;
-  top: 28px;
-  right: 30px;
+  top: 27px;
+  right: 29px;
   z-index: 3;
   display: block;
   width: 25px;
@@ -16,7 +15,6 @@
   font-size: 0;
   border: none;
   cursor: pointer;
-
   background-color: @cl-white;
 }
 
@@ -24,11 +22,9 @@
   content: "";
   position: absolute;
   top: 5px;
-  right: 0;
-
+  right: 2px;
   width: 20px;
   height: 2px;
-
   background-color: @cl-toggle;
   box-shadow: 0 6px 0 0 @cl-toggle,
               0 12px 0 0 @cl-toggle;
@@ -40,12 +36,10 @@
   &::after {
     content: "";
     position: absolute;
-    top: 12px;
-    right: -3px;
-
-    width: 30px;
-    height: 2px;
-
+    top: 11px;
+    right: -2px;
+    width: 27px;
+    height: 3px;
     background-color: @cl-toggle;
   }
 
@@ -68,28 +62,14 @@
 .main-nav__menu-list {
   display: flex;
   flex-direction: column;
-
   margin: 0;
   padding: 0;
   list-style: none;
-
-  &--main {
-
-    /*временно для сетки*/
-    /*background-color: lightcyan;*/
-  }
-
-  &--user {
-
-    /*временно для сетки*/
-    /*background-color: lightyellow;*/
-  }
 }
 
 .main-nav__menu-item {
   margin: 0 0 0 0;
-  padding: 24px 0 24px 75px;
-
+  padding: 25px 0 29px 75px;
   background-color: @cl-white;
   border-bottom: 1px solid @cl-header-border;
 }
@@ -103,7 +83,7 @@
   &--search::before {
     content: "";
     position: absolute;
-    top: 3px;
+    top: 5px;
     left: -43px;
     width: 19px;
     height: 19px;
@@ -114,8 +94,8 @@
   &--cart::before {
     content: "";
     position: absolute;
-    top: 3px;
-    left: -43px;
+    top: 5px;
+    left: -44px;
     width: 22px;
     height: 19px;
 
@@ -126,7 +106,7 @@
 .main-nav__special {
   display: none;
   margin: 0;
-  padding: 10px 0 0 0;
+  padding: 17px 0 0 0;
   list-style: none;
   font-size: 15px;
 }
@@ -134,13 +114,10 @@
 .main-nav__label {
   display: none;
   order: 2;
-
   margin: 0;
-  padding: 10px 0 0 0;
-
+  padding: 17px 0 0 0;
   font-size: 15px;
 }
-
 
 @media @mobile-widths-only {
   .main-nav--closed .main-nav__menu-list {
@@ -168,8 +145,6 @@
   }
 }
 
-
-
 @media @tablet-widths {
 
   .main-nav__toggle {
@@ -180,7 +155,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-
     width: 668px;
     margin: 0 auto;
     padding: 0;
@@ -194,24 +168,42 @@
     &--main {
       order: 1;
       width: 305px;
-
       font-size: 15px;
-
-      & .main-nav__menu-item {
-        margin: 0;
-        padding: 10px 0 0 0;
-
-        background-color: transparent;
-      }
-    }
-
-    &--user {
-      /*width: 400px;*/
     }
   }
 
   .main-nav__menu-item {
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
     border: 0;
+
+    &--main {
+      margin: 0;
+      padding: 17px 0 0 0;
+    }
+
+    &--user {
+      padding: 30px 0 35px 83px;
+      border-left: 1px solid @cl-header-border;
+    }
+
+    &--user:first-child {
+      font-size: 0;
+    }
+
+    .main-nav__link {
+
+      &--search:before {
+        top: -6px;
+        left: -49px;
+      }
+
+      &--cart:before {
+        left: -52px;
+      }
+    }
+
   }
 
   .main-nav__label {
@@ -219,11 +211,8 @@
   }
 }
 
-
-
 @media @desktop-widths {
   .main-nav__wrapper {
-
     width: 1050px;
   }
 
@@ -232,13 +221,20 @@
     &--main {
       order: -1;
       width: 375px;
-
       font-size: 17px;
+    }
+  }
 
-      & .main-nav__menu-item {
-        margin: 0;
-        padding: 25px 0 25px 0;
-      }
+  .main-nav__menu-item {
+
+    &--main {
+      margin: 0;
+      padding: 30px 0 35px 0;
+    }
+
+    &--main:nth-child(2) {
+      padding-left: 35px;
+      border-left: 1px solid @cl-header-border;
     }
   }
 
