--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -1,11 +1,9 @@
 .page-title {
   margin: 0;
   padding: 0;
-
   background-color: @cl-light-gray;
-
   &--index {
-    height: 282px;
+    height: 283px;
     background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
   }
 }
@@ -13,16 +11,20 @@
 .page-title__label {
   width: 260px;
   margin: 0 auto;
-  padding: 70px 0 70px 0;
+  padding: 68px 0 78px 0;
   font-family: @font-bold;
   font-size: 27px;
+  font-weight: 700;
   line-height: 30px;
   text-align: center;
+
+  &--index {
+    padding: 70px 0 76px 0;
+  }
 
   /*временно для сетки*/
   /*background-color: red;*/
 }
-
 
 @media @tablet-widths {
   .page-title {
@@ -37,9 +39,13 @@
 
   .page-title__label {
     width: 500px;
-
+    padding: 94px 0 85px 0;
     font-size: 43px;
     line-height: 50px;
+
+    &--index {
+      padding: 152px 0 0 0;
+    }
   }
 
   .page-title__label br {
@@ -53,8 +59,11 @@
 
   .page-title__label {
     width: 620px;
-
     font-size: 53px;
     line-height: 57px;
+
+    &--index {
+      padding: 154px 0 0 0;
+    }
   }
 }
