--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -1,7 +1,7 @@
 .btn {
   display: block;
   margin: 0;
-  padding: 10px 0;
+  padding: 15px 0 16px 0;
   font-family: @font-bold;
   font-size: 17px;
   line-height: 1;
