--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,71 +1,125 @@
+.contacts {
+  /*background-color: lightgreen;*/
+}
+
 .contacts__wrapper {
-  position: relative;
   width: 320px;
   margin: 0 auto;
-  padding: 30px 0 0 0;
+  padding: 35px 0 0 0;
 }
 
 .contacts__title {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 30px;
   font-family: @font-bold;
   font-size: 18px;
+  font-weight: 700;
   line-height: 30px;
 }
 
-.contacts__content {
-  margin: 20px 0 20px 0;
-  padding: 0;
+.contacts__list {
+  display: flex;
+  flex-direction: column;
+  width: 260px;
+  margin: 0 auto;
+  padding: 25px 0 38px 0;
   font-size: 15px;
   line-height: 30px;
   color: @cl-gray;
 }
 
-.contacts__write-us {
-  width: 256px;
-  margin: 20px auto 0 auto;
+.contacts__item {
+  display: flex;
+  min-height: 60px;
 }
 
+.contacts__item-title {
+  width: 75px;
+}
 
+.contacts__content-link {
+  color: @cl-gray;
+  text-decoration: none;
+  border-bottom: 1px solid #62d1ba;
+}
+
+.contacts__map {
+  width: 320px;
+  height: 457px;
+
+  /**/
+  background-color: lightyellow;
+}
+
+.contacts__write-us {
+  width: 256px;
+  margin: 39px auto 0 auto;
+}
 
 @media @tablet-widths {
   .contacts__wrapper {
     width: 768px;
+    padding: 60px 0 0 0;
   }
 
   .contacts__title {
+    padding: 0 0 0 50px;
     font-size: 43px;
     line-height: 50px;
   }
 
-  .contacts__content {
+  .contacts__list {
+    flex-direction: row;
+    width: 668px;
+    padding: 48px 0 58px 0;
     font-size: 17px;
+  }
+
+  .contacts__item {
+    width: 334px;
+  }
+
+  .contacts__map {
+    width: 768px;
+    height: 457px;
+  }
+
+  .contacts__write-us {
+    width: 226px;
+    margin: 55px auto 0 auto;
   }
 }
 
 
 @media @desktop-widths {
   .contacts__wrapper {
-    width: 700px;
-    padding: 70px 175px 0 175px;
-
-    /*верменно*/
-    min-height: 457px;
+    position: relative;
+    width: 875px;
+    padding: 142px 0 60px 175px;
   }
 
   .contacts__title {
+    padding: 0;
+
     font-size: 53px;
     line-height: 57px;
   }
 
+  .contacts__list {
+    flex-direction: column;
+    width: 350px;
+    margin: 0;
+  }
+
   .contacts__map {
     position: absolute;
-    top: 0;
+    top: 71px;
     right: 0;
+    width: 525px;
+    height: 457px;
   }
 
   .contacts__write-us {
-    width: 226px;
-    margin: 0;
+    margin: 21px 0 0 0;
   }
 }
