--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -1,7 +1,8 @@
 .copyright {
   margin: 0;
-  padding: 20px 0 20px 0;
+  padding: 16px 0 16px 0;
   text-align: center;
+  border-top: 1px solid #e5e5e5;
 }
 
 .copyright__text {
@@ -17,4 +18,10 @@
   vertical-align: middle;
   margin: 0 0 0 20px;
   padding: 0;
+}
+
+@media @tablet-widths {
+  .copyright {
+    border: 0;
+  }
 }
