--- a/less/blocks/modal-size.less
+++ b/less/blocks/modal-size.less
@@ -11,6 +11,7 @@
   padding: 0;
   font-family: @font-bold;
   font-size: 25px;
+  font-weight: 700;
   line-height: 30px;
   text-transform: uppercase;
   text-align: center;
@@ -32,7 +33,8 @@
   width: 260px;
   font-family: @font-bold;
   font-size: 17px;
-  line-height: 1;
+  font-weight: 700;
+  line-height: 17px;
   text-transform: uppercase;
   color: @cl-white;
   background-color: @cl-turquoise;
