--- a/less/blocks/product-week.less
+++ b/less/blocks/product-week.less
@@ -1,14 +1,16 @@
 .product-week {
-
+  /*background-color: lightyellow;*/
 }
 
 .product-week__wrapper {
-  .clearfix();
-  position: relative;
-
   width: 260px;
   margin: 0 auto;
-  padding: 30px 0 0 0;
+  padding: 26px 0 42px 0;
+}
+
+.product-week__header {
+  display: flex;
+  flex-direction: column;
 }
 
 .product-week__title {
@@ -16,6 +18,7 @@
   padding: 0;
   font-family: @font-bold;
   font-size: 25px;
+  font-weight: 700;
   line-height: 30px;
 }
 
@@ -24,37 +27,55 @@
   padding: 0;
   font-family: @font-bold;
   font-size: 17px;
-  line-height: 1;
+  font-weight: 700;
+  line-height: 17px;
   text-transform: uppercase;
   color: @cl-turquoise;
 }
 
 .product-week__desc {
-  margin: 20px 0 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 30px 0 17px 0;
   font-size: 15px;
   line-height: 24px;
   color: @cl-gray;
 }
 
 .product-week__properties {
-  margin: 20px 0 0 0;
+  width: 260px;
+  margin: 0 0 27px 0;
   padding: 0;
   font-size: 15px;
   line-height: 20px;
   color: @cl-gray;
+  border-collapse: collapse;
+
+  & td {
+    padding: 10px 0 10px 0;
+    border-bottom: 1px solid @cl-header-border;
+  }
 }
 
 .product-week__img {
-  margin: 20px 0 0 0;
+  margin: 0 0 0 0;
   padding: 0;
+  width: 260px;
+  height: 315px;
+  background-color: @cl-light-gray;
+}
+
+.product-week__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  height: 103px;
+  padding: 23px 0 0 0;
 }
 
 .product-week__cy {
-  display: inline-block;
-  vertical-align: top;
-  width: 260px;
-  margin: 20px 0 0 0;
+  margin: 0;
   padding: 0;
   font-family: @font-bold;
   font-weight: 700;
@@ -66,21 +87,20 @@
 
 .product-week__buy {
   width: 256px;
-  margin: 20px 0 0 0;
 }
 
 
-
-
 @media @tablet-widths {
-
   .product-week__wrapper {
+    position: relative;
     width: 668px;
-    margin: 0 auto;
-    padding: 40px 0 0 0;
+    padding: 49px 0 69px 0;
+  }
 
-    /*временно*/
-    min-height: 520px;
+  .product-week__header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .product-week__title {
@@ -90,80 +110,87 @@
   }
 
   .product-week__label {
-    position: absolute;
-    top: 40px;
-    right: 30px;
-    width: 70px;
+    width: 100px;
     text-align: center;
   }
 
   .product-week__desc {
-    width: 292px;
+    width: 300px;
+    padding: 49px 0 35px 0;
     font-size: 17px;
     line-height: 30px;
   }
 
   .product-week__properties {
-    width: 292px;
+    width: 290px;
   }
 
   .product-week__img {
     position: absolute;
-    top: 100px;
+    top: 157px;
     right: 0;
-
-    /*временно*/
     width: 333px;
     height: 404px;
   }
 
-  .product-week__cy {
-    width: 292px;
+  .product-week__footer {
+    width: 290px;
+    height: 111px;
+    padding: 27px 0 0 0;
+  }
 
+  .product-week__cy {
     font-size: 20px;
     line-height: 24px;
   }
 
   .product-week__buy {
-
     width: 288px;
   }
 }
 
-
-
 @media @desktop-widths {
   .product-week__wrapper {
-    width: 875px;
-    margin: 0 auto;
-    padding: 70px 0 0 175px;
+    width: 1050px;
+    padding: 129px 0 96px 0;
+  }
 
-    /*временно*/
-    min-height: 670px;
+  .product-week__header {
+    justify-content: flex-start;
   }
 
   .product-week__title {
-
     font-size: 53px;
     line-height: 57px;
   }
 
   .product-week__label {
-    position: absolute;
-    top: 70px;
-    left: 30px;
+    order: -1;
+    width: 131px;
+    padding: 0 22px 0 22px;
   }
 
   .product-week__desc {
+    margin: 0 0 0 175px;
+    padding: 47px 0 48px 0;
+  }
 
+  .product-week__properties {
+    margin: 0 0 80px 175px;
   }
 
   .product-week__img {
-    top: 50px;
+    top: 76px;
     z-index: -1;
-
-    /*временно*/
     width: 525px;
     height: 636px;
+  }
+
+  .product-week__footer {
+    margin: 0 0 0 175px;
+  }
+
+  .product-week__cy {
+
   }
 }
