--- a/less/blocks/product.less
+++ b/less/blocks/product.less
@@ -1,17 +1,25 @@
 .product {
-  position: relative;
-  width: 260px;
-  height: 375px;
-
+  display: flex;
+  flex-direction: column;
   margin: 30px 0 0 0;
-  padding: 0;
-  border: 1px solid @cl-product-border;
+}
+
+.product__photo {
+  width: 260px;
+  height: 195px;
+  background-color: #f1f1f1;
+}
+
+.product__content {
+  display: flex;
+  flex-direction: column;
+  width: 204px;
+  padding: 25px 27px 25px 27px;
+  border: 1px solid #ececec;
 }
 
 .product__title {
-  display: block;
-  margin: 0;
-  padding: 0;
+  width: 204px;
   font-family: @font-bold;
   font-size: 17px;
   line-height: 24px;
@@ -20,12 +28,20 @@
 }
 
 .product__properties {
-  display: block;
-  margin: 0;
+  width: 204px;
+  margin: 5px 0 5px 0;
   padding: 0;
   font-size: 13px;
   line-height: 30px;
   color: @cl-gray;
+}
+
+.product__wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px 0 0 0;
+  padding: 20px 0 3px 0;
+  border-top: 1px solid #ececec;
 }
 
 .product__cy {
@@ -37,26 +53,31 @@
   color: @cl-black;
 }
 
-
 @media @tablet-widths {
   .product {
-    padding: 0 0 0 334px;
-
-    width: 334px;
-    height: 335px;
+    flex-direction: row;
+    margin: 54px 0 0 0;
   }
 
-  .product__img {
-    position: absolute;
-    top: 0;
-    left: 0;
+  .product__photo {
+    width: 334px;
+    height: 334px;
+  }
+
+  .product__content {
+    width: 282px;
+    height: 286px;
+    padding: 23px 26px 23px 26px;
   }
 
   .product__title {
+    width: 240px;
     font-size: 20px;
   }
 
   .product__properties {
+    flex-grow: 1;
+    width: 268px;
     font-size: 15px;
   }
 
@@ -67,13 +88,17 @@
 
 @media @desktop-widths {
   .product {
-    padding: 0;
-
-    width: 315px;
-    height: 650px;
+    flex-direction: column;
   }
 
-  .product__img {
-    position: static;
+  .product__photo {
+    width: 316px;
+    height: 462px;
+  }
+
+  .product__content {
+    width: 264px;
+    height: 148px;
+    padding: 23px 25px 24px 25px;
   }
 }
