--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,8 +1,11 @@
+.reviews {
+  /*background-color: lightcyan;*/
+}
+
 .reviews__wrapper {
-  position: relative;
   width: 260px;
   margin: 0 auto;
-  padding: 30px 0 0 0;
+  padding: 46px 0 51px 0;
 }
 
 .reviews__title {
@@ -10,17 +13,18 @@
   padding: 0;
   font-family: @font-bold;
   font-size: 25px;
+  font-weight: 700;
   line-height: 30px;
 }
 
 .reviews__item {
   margin: 0;
-  padding: 0;
+  padding: 23px 0 0 0;
 }
 
 .reviews__text {
-  /*margin: 0;
-  padding: 0;*/
+  margin: 0;
+  padding: 0;
   font-size: 15px;
   line-height: 30px;
   color: @cl-gray;
@@ -29,9 +33,10 @@
 .reviews__author-name {
   display: block;
   margin: 0;
-  padding: 0;
+  padding: 27px 0 0 0;
   font-family: @font-bold;
-  font-size: 17px;
+  font-size: 18px;
+  font-weight: 700;
   font-style: normal;
   line-height: 24px;
 }
@@ -39,30 +44,74 @@
 .reviews__author-nickname {
   display: block;
   margin: 0;
-  padding: 0;
+  padding: 2px 0 0 0;
   font-size: 17px;
   line-height: 30px;
   color: @cl-gray;
 }
 
-.reviews__write {
-  width: 256px;
-  margin: 20px 0 0 0;
+.reviews__arrows {
+  margin: 0;
+  padding: 31px 0 0 0;
+  font-size: 0;
 }
 
+.reviews__arrow {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  width: 128px;
+  height: 50px;
+  border: 1px solid #ececec;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 23px;
+    left: 38px;
+    width: 50px;
+    height: 18px;
+    border-top: 4px solid @cl-black;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 16px;
+    width: 14px;
+    height: 14px;
+    border: 4px solid @cl-black;
+    border-top: 0;
+    border-right: 0;
+  }
+
+  &--prev::after {
+    left: 40px;
+    transform: rotate(45deg);
+  }
+
+  &--next::after {
+    right: 42px;
+    transform: rotate(-135deg);
+  }
+}
+
+.reviews__arrow:nth-child(2) {
+  margin-left: -1px;
+}
+
+.reviews__write {
+  margin: 38px 0 0 0;
+}
 
 @media @tablet-widths {
-
   .reviews__wrapper {
+    position: relative;
     width: 668px;
     margin: 0 auto;
-    padding: 85px 50px 0 50px;
+    padding: 76px 50px 133px 50px;
 
-    background: @cl-white url("../img/review@1x.jpg") no-repeat 0%;
-
-
-    /*временно*/
-    min-height: 370px;
+    background: @cl-white url("../img/review@1x.jpg") no-repeat 0% 0%;
   }
 
   .reviews__title {
@@ -70,20 +119,52 @@
     line-height: 50px;
   }
 
+  .reviews__item {
+    padding: 49px 0 0 0;
+  }
+
   .reviews__text {
     font-size: 17px;
   }
 
+  .reviews__author-name {
+    padding: 58px 0 0 0;
+  }
+
   .reviews__arrows {
     position: absolute;
-    bottom: 150px;
-    right: 37px;
+    bottom: 134px;
+    right: 50px;
+    padding: 0;
+  }
+
+  .reviews__arrow {
+    width: 82px;
+    border: 0;
+
+    &::before {
+      width: 46px;
+      top: 22px;
+      left: 13px;
+    }
+
+    &::after {
+      top: 15px;
+    }
+
+    &--prev::after {
+      left: 13px;
+    }
+
+    &--next::after {
+      right: 22px;
+    }
   }
 
   .reviews__write {
     position: absolute;
-    top: 85px;
-    right: 37px;
+    top: 79px;
+    right: 50px;
     width: 171px;
     margin: 0;
   }
@@ -93,13 +174,26 @@
 @media @desktop-widths {
 
   .reviews__wrapper {
-    width: 875px;
+    width: 775px;
     margin: 0 auto;
-    padding: 80px 0 0 175px;
+    padding: 70px 100px 187px 175px;
   }
 
   .reviews__title {
     font-size: 53px;
     line-height: 57px;
+  }
+
+  .reviews__author-name {
+    padding: 38px 0 0 0;
+  }
+
+  .reviews__arrows {
+    bottom: 188px;
+    right: 0;
+  }
+
+  .reviews__write {
+    right: 0;
   }
 }
