Обновил less файлы

--- a/less/common.less
+++ b/less/common.less
@@ -1,6 +1,7 @@
 body {
   min-width: 320px;
   font-family: @font-regular;
+  font-weight: 400;
   color: @cl-black;
   background-color: @cl-white;
 }
