Обновление less файлов

--- a/less/blocks/about-us.less
+++ b/less/blocks/about-us.less
@@ -5,7 +5,7 @@
 .about-us__wrapper {
   width: 260px;
   margin: 0 auto;
-  padding: 27px 0 30px 0;
+  padding: 27px 0 0 0;
 
   font-family: @font-bold;
 }
@@ -29,13 +29,17 @@
   font-size: 17px;
   font-weight: 700;
   line-height: 20px;
+
+  /**/
+  /*background-color: lightyellow;*/
 }
 
 .about-us__item {
   position: relative;
   margin: 0;
-  padding: 56px 0 19px 0;
+  padding: 55px 0 28px 0;
 
+  /**/
   /*background-color: lightcyan;*/
 
   &::before {
@@ -76,7 +80,7 @@
 
   .about-us__wrapper {
     width: 668px;
-    padding: 48px 0 54px 0;
+    padding: 48px 0 27px 0;
   }
 
   .about-us__title {
@@ -96,7 +100,7 @@
 
   .about-us__item {
     width: 334px;
-    padding: 53px 0 45px 0;
+    padding: 53px 0 54px 0;
 
     &--ecology {
       order: 1;
@@ -128,7 +132,7 @@
 
   .about-us__wrapper {
     width: 700px;
-    padding: 60px 0 59px 0;
+    padding: 49px 0 32px 0;
   }
 
   .about-us__title {
@@ -139,5 +143,6 @@
 
   .about-us__item {
     width: 350px;
+    padding: 51px 0 56px 0;
   }
 }
