--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -5,7 +5,7 @@
 .contacts__wrapper {
   width: 320px;
   margin: 0 auto;
-  padding: 35px 0 0 0;
+  padding: 35px 0 39px 0;
 }
 
 .contacts__title {
@@ -22,7 +22,7 @@
   flex-direction: column;
   width: 260px;
   margin: 0 auto;
-  padding: 25px 0 38px 0;
+  padding: 26px 0 37px 0;
   font-size: 15px;
   line-height: 30px;
   color: @cl-gray;
@@ -46,9 +46,7 @@
 .contacts__map {
   width: 320px;
   height: 457px;
-
-  /**/
-  background-color: lightyellow;
+  background: #e9e5dc url("../img/map-mobile@1x.jpg") no-repeat;
 }
 
 .contacts__write-us {
@@ -59,7 +57,7 @@
 @media @tablet-widths {
   .contacts__wrapper {
     width: 768px;
-    padding: 60px 0 0 0;
+    padding: 59px 0 57px 0;
   }
 
   .contacts__title {
@@ -71,7 +69,7 @@
   .contacts__list {
     flex-direction: row;
     width: 668px;
-    padding: 48px 0 58px 0;
+    padding: 49px 0 57px 0;
     font-size: 17px;
   }
 
@@ -95,7 +93,7 @@
   .contacts__wrapper {
     position: relative;
     width: 875px;
-    padding: 142px 0 60px 175px;
+    padding: 130px 0 105px 175px;
   }
 
   .contacts__title {
@@ -109,17 +107,18 @@
     flex-direction: column;
     width: 350px;
     margin: 0;
+    padding: 48px 0 60px 0;
   }
 
   .contacts__map {
     position: absolute;
-    top: 71px;
+    top: 60px;
     right: 0;
     width: 525px;
     height: 457px;
   }
 
   .contacts__write-us {
-    margin: 21px 0 0 0;
+    margin: 20px 0 0 0;
   }
 }
