--- a/less/blocks/production.less
+++ b/less/blocks/production.less
@@ -4,7 +4,7 @@
   position: relative;
 
   width: 260px;
-  margin: 30px auto 0 auto;
+  margin: 30px auto 58px auto;
   border: 1px solid #ececec;
 }
 
@@ -43,7 +43,7 @@
 @media @tablet-widths {
   .production {
     width: 668px;
-    margin: 53px auto 0 auto;
+    margin: 53px auto 63px auto;
   }
 
   .production__title {
@@ -76,7 +76,7 @@
   .production {
     width: 1050px;
     min-height: 455px;
-    margin: 57px auto 0 auto;
+    margin: 57px auto 103px auto;
   }
 
   .production__title {
