--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -1,6 +1,6 @@
 .copyright {
   margin: 0;
-  padding: 16px 0 16px 0;
+  padding: 16px 0 24px 0;
   text-align: center;
   border-top: 1px solid #e5e5e5;
 }
@@ -10,7 +10,8 @@
   vertical-align: middle;
   font-family: @font-bold;
   font-size: 19px;
-  line-height: 1;
+  font-weight: 700;
+  line-height: 19px;
 }
 
 .copyright__link {
