--- a/less/blocks/modal-size.less
+++ b/less/blocks/modal-size.less
@@ -1,8 +1,15 @@
 .modal-size {
-  margin: 0;
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  z-index: 10;
+  display: none;
+  margin: 0 0 0 -159px;
   padding: 30px 0 46px 0;
   width: 318px;
+  background-color: @cl-white;
   border: 1px solid #c7c7c7;
+  box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.2);
 }
 
 .modal-size__title {
@@ -79,6 +86,7 @@
 @media @tablet-widths {
   .modal-size {
     width: 566px;
+    margin: 0 0 0 -283px;
     padding: 32px 0 46px 0;
   }
 
