--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   background-color: @cl-light-gray;
+
   &--index {
     height: 283px;
     background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 20%;
@@ -11,7 +12,7 @@
 .page-title__label {
   width: 260px;
   margin: 0 auto;
-  padding: 68px 0 78px 0;
+  padding: 69px 0 77px 0;
   font-family: @font-bold;
   font-size: 27px;
   font-weight: 700;
@@ -28,18 +29,20 @@
 
 @media @tablet-widths {
   .page-title {
-
     border-top: 1px solid @cl-header-border;
+    background: @cl-light-gray url("../img/zigzag-fill-desktop.svg") repeat-x 0 100%;
+    background-size: 100% 24px;
 
     &--index {
       height: 626px;
       background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 100%;
+      background-size: auto;
     }
   }
 
   .page-title__label {
     width: 500px;
-    padding: 94px 0 85px 0;
+    padding: 94px 0 93px 0;
     font-size: 43px;
     line-height: 50px;
 
@@ -55,10 +58,17 @@
 
 
 @media @desktop-widths {
+  .page-title {
+    background-size: 100% 34px;
 
+    &--index {
+      background-size: auto;
+    }
+  }
 
   .page-title__label {
     width: 620px;
+    padding: 94px 0 120px 0;
     font-size: 53px;
     line-height: 57px;
 
