--- a/less/blocks/product-catalog.less
+++ b/less/blocks/product-catalog.less
@@ -11,6 +11,7 @@
 @media @tablet-widths {
   .product-catalog {
     width: 668px;
+    padding: 13px 0 0 0;
   }
 }
 
@@ -20,5 +21,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 1050px;
+    padding: 57px 0 0 0;
   }
 }
