--- a/less/blocks/product-type.less
+++ b/less/blocks/product-type.less
@@ -60,6 +60,21 @@
 
 
 @media @tablet-widths {
+  .product-type {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -14px;
+      left: 0;
+      width: 100%;
+      height: 24px;
+      background: url("../img/zigzag-fill-desktop.svg") repeat-x;
+      background-size: contain;
+    }
+  }
+
   .product-type__list {
     flex-direction: row;
     justify-content: space-between;
@@ -74,17 +89,25 @@
 
   .product-type__link {
     width: 262px;
-    padding: 27px 36px 27px 36px;
+    padding: 27px 36px 30px 36px;
   }
 }
 
 @media @desktop-widths {
+  .product-type {
+
+    &::after {
+      bottom: -19px;
+      height: 34px;
+    }
+  }
+
   .product-type__list {
     width: 1050px;
   }
 
   .product-type__link {
     width: 451px;
-    padding: 27px 36px 27px 38px;
+    padding: 27px 36px 30px 38px;
   }
 }
