--- a/less/blocks/product-week.less
+++ b/less/blocks/product-week.less
@@ -1,5 +1,16 @@
 .product-week {
-  /*background-color: lightyellow;*/
+  position:  relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background: url("../img/zigzag-line-desktop.svg") repeat-x;
+    background-size: contain;
+  }
 }
 
 .product-week__wrapper {
@@ -24,18 +35,18 @@
 
 .product-week__label {
   margin: 0;
-  padding: 0;
+  padding: 6px 0 0 0;
   font-family: @font-bold;
   font-size: 17px;
   font-weight: 700;
-  line-height: 17px;
+  line-height: 16px;
   text-transform: uppercase;
   color: @cl-turquoise;
 }
 
 .product-week__desc {
   margin: 0;
-  padding: 30px 0 17px 0;
+  padding: 26px 0 17px 0;
   font-size: 15px;
   line-height: 24px;
   color: @cl-gray;
@@ -43,7 +54,7 @@
 
 .product-week__properties {
   width: 260px;
-  margin: 0 0 27px 0;
+  margin: 0 0 26px 0;
   padding: 0;
   font-size: 15px;
   line-height: 20px;
@@ -71,7 +82,7 @@
   justify-content: space-between;
 
   height: 103px;
-  padding: 23px 0 0 0;
+  padding: 18px 0 0 0;
 }
 
 .product-week__cy {
@@ -91,10 +102,17 @@
 
 
 @media @tablet-widths {
+  .product-week {
+
+    &::after {
+      height: 17px;
+    }
+  }
+
   .product-week__wrapper {
     position: relative;
     width: 668px;
-    padding: 49px 0 69px 0;
+    padding: 46px 0 69px 0;
   }
 
   .product-week__header {
@@ -110,13 +128,14 @@
   }
 
   .product-week__label {
-    width: 100px;
+    width: 126px;
+    padding: 6px 0 0 0;
     text-align: center;
   }
 
   .product-week__desc {
     width: 300px;
-    padding: 49px 0 35px 0;
+    padding: 49px 0 36px 0;
     font-size: 17px;
     line-height: 30px;
   }
@@ -127,7 +146,7 @@
 
   .product-week__img {
     position: absolute;
-    top: 157px;
+    top: 154px;
     right: 0;
     width: 333px;
     height: 404px;
@@ -150,9 +169,16 @@
 }
 
 @media @desktop-widths {
+  .product-week {
+
+    &::after {
+      height: 34px;
+    }
+  }
+
   .product-week__wrapper {
     width: 1050px;
-    padding: 129px 0 96px 0;
+    padding: 125px 0 107px 0;
   }
 
   .product-week__header {
@@ -167,12 +193,12 @@
   .product-week__label {
     order: -1;
     width: 131px;
-    padding: 0 22px 0 22px;
+    padding: 2px 24px 0 16px;
   }
 
   .product-week__desc {
     margin: 0 0 0 175px;
-    padding: 47px 0 48px 0;
+    padding: 48px 0 48px 0;
   }
 
   .product-week__properties {
@@ -180,7 +206,7 @@
   }
 
   .product-week__img {
-    top: 76px;
+    top: 73px;
     z-index: -1;
     width: 525px;
     height: 636px;
