--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,11 +1,22 @@
 .reviews {
-  /*background-color: lightcyan;*/
+  position:  relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 7px;
+    background: url("../img/zigzag-line-desktop.svg") repeat-x;
+    background-size: contain;
+  }
 }
 
 .reviews__wrapper {
   width: 260px;
   margin: 0 auto;
-  padding: 46px 0 51px 0;
+  padding: 28px 0 51px 0;
 }
 
 .reviews__title {
@@ -19,7 +30,7 @@
 
 .reviews__item {
   margin: 0;
-  padding: 23px 0 0 0;
+  padding: 24px 0 0 0;
 }
 
 .reviews__text {
@@ -33,7 +44,7 @@
 .reviews__author-name {
   display: block;
   margin: 0;
-  padding: 27px 0 0 0;
+  padding: 26px 0 0 0;
   font-family: @font-bold;
   font-size: 18px;
   font-weight: 700;
@@ -44,7 +55,7 @@
 .reviews__author-nickname {
   display: block;
   margin: 0;
-  padding: 2px 0 0 0;
+  padding: 3px 0 0 0;
   font-size: 17px;
   line-height: 30px;
   color: @cl-gray;
@@ -52,7 +63,7 @@
 
 .reviews__arrows {
   margin: 0;
-  padding: 31px 0 0 0;
+  padding: 30px 0 0 0;
   font-size: 0;
 }
 
@@ -105,11 +116,18 @@
 }
 
 @media @tablet-widths {
+  .reviews {
+
+    &::after {
+      height: 17px;
+    }
+  }
+
   .reviews__wrapper {
     position: relative;
     width: 668px;
     margin: 0 auto;
-    padding: 76px 50px 133px 50px;
+    padding: 76px 50px 134px 50px;
 
     background: @cl-white url("../img/review@1x.jpg") no-repeat 0% 0%;
   }
@@ -120,7 +138,7 @@
   }
 
   .reviews__item {
-    padding: 49px 0 0 0;
+    padding: 48px 0 0 0;
   }
 
   .reviews__text {
@@ -172,11 +190,17 @@
 
 
 @media @desktop-widths {
+  .reviews {
+
+    &::after {
+      height: 34px;
+    }
+  }
 
   .reviews__wrapper {
     width: 775px;
     margin: 0 auto;
-    padding: 70px 100px 187px 175px;
+    padding: 70px 100px 197px 175px;
   }
 
   .reviews__title {
@@ -185,7 +209,7 @@
   }
 
   .reviews__author-name {
-    padding: 38px 0 0 0;
+    padding: 39px 0 0 0;
   }
 
   .reviews__arrows {
