Обновление less файлов

--- a/less/style.less
+++ b/less/style.less
@@ -27,4 +27,5 @@
 @import "blocks/social.less";
 @import "blocks/copyright.less";
 
+@import "blocks/modal-overlay.less";
 @import "blocks/modal-size.less";
