--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -29,20 +29,34 @@
 
 @media @tablet-widths {
   .page-title {
+    position: relative;
+    z-index: -1;
+
     border-top: 1px solid @cl-header-border;
-    background: @cl-light-gray url("../img/zigzag-fill-desktop.svg") repeat-x 0 100%;
-    background-size: 100% 24px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 100%;
+      height: 24px;
+      background: url("../img/zigzag-fill-desktop.svg") repeat-x;
+      background-size: contain;
+    }
 
     &--index {
       height: 626px;
       background: #f9f9f9 url("../img/hero-mobile@1x.jpg") no-repeat 50% 100%;
-      background-size: auto;
+      &::after {
+        display: none;
+      }
     }
   }
 
   .page-title__label {
     width: 500px;
-    padding: 94px 0 93px 0;
+    padding: 94px 0 91px 0;
     font-size: 43px;
     line-height: 50px;
 
@@ -59,7 +73,11 @@
 
 @media @desktop-widths {
   .page-title {
-    background-size: 100% 34px;
+
+    &::after {
+      bottom: -19px;
+      height: 34px;
+    }
 
     &--index {
       background-size: auto;
@@ -68,7 +86,7 @@
 
   .page-title__label {
     width: 620px;
-    padding: 94px 0 120px 0;
+    padding: 94px 0 101px 0;
     font-size: 53px;
     line-height: 57px;
 
